--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
   </div>
 <script>
-  const apiKey="be33205d22a2152127858424ab0adb7f";
+  const apiKey="";
 const apiUrl= "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
 const searchBox = document.querySelector(".search input");
 const searchBtn = document.querySelector(".search button");
