--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     
       <a href ="index.html">Home</a>
       <a href ="./components/About.html">About</a>
-      <a href ="Service.html">Service</a>
-      <a href ="Store.html">Store</a>
-      <a href ="Login.html">Login</a>  
+      <a href ="./components/Service.html">Service</a>
+      <a href ="./components/Store.html">Store</a>
+      <a href ="./components/Login.html">Login</a>  
     </div>
   <div class="title">
     <h1>🌿 Welcome to Agro-Tech – Where Farmers Meet the Future!</h1>
@@ -54,7 +54,6 @@
       </div>
     </div>
   </div>
-<script src="config.js"></script>
 <script src="scripts.js"></script>
 </body>
 </html>
