--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title> Agro-Tech </title>
 </head>
 <body>
+<header>
     <div class="navbar">
     
       <a href ="index.html">Home</a>
@@ -17,10 +18,12 @@
       <a href ="./components/Store.html">Store</a>
       <a href ="./components/Login.html">Login</a>  
     </div>
+  </header>
   <div class="title">
     <h1>🌿 Welcome to Agro-Tech – Where Farmers Meet the Future!</h1>
     
   </div>
+  <section>
   <div class="card">
     <div class="search">
       <input type="text" placeholder="Enter city name to check weather" spellcheck="false">
@@ -54,6 +57,8 @@
       </div>
     </div>
   </div>
+</section>
+
 <script src="scripts.js"></script>
 </body>
 </html>
