--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
 <header>
     <div class="navbar">
-    
       <a href ="index.html">Home</a>
       <a href ="./components/About.html">About</a>
       <a href ="./components/Service.html">Service</a>
@@ -20,7 +19,7 @@
     </div>
   </header>
   <div class="title">
-    <h1>🌿 Welcome to Agro-Tech – Where Farmers Meet the Future!</h1>
+    <h1>🌿Welcome to Agro-Tech - Where Farmers Meet the Future!</h1>
     
   </div>
   <section>
@@ -58,7 +57,24 @@
     </div>
   </div>
 </section>
-
+<section>
+  <div class="container1">
+    <div class="smart-farm">
+      <div class="title1">
+        <h1> Smart Farm : IOT based soil monitoring </h1>
+      </div>
+        <div class="text-contents">
+        <ul>IoT-based soil monitoring is a smart way to keep track of the health and condition of soil using modern technology.</ul>
+        <ul>It uses small electronic devices called sensors, which are placed in the soil to collect important information like moisture levels (how wet or dry the soil is), temperature, and nutrient content.</ul>
+        <ul> These sensors are connected to the internet, allowing them to send this data to a computer, smartphone, or cloud storage in real-time.</ul>
+      </div>
+      <div class="image1">
+        <img src="assets/iot_device.jpeg">
+      </div>
+      </div>
+    </div>
+  </div>
+</section>
 <script src="scripts.js"></script>
 </body>
 </html>
