--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul>It uses small electronic devices called sensors, which are placed in the soil to collect important information like moisture levels (how wet or dry the soil is), temperature, and nutrient content.</ul>
         <ul> These sensors are connected to the internet, allowing them to send this data to a computer, smartphone, or cloud storage in real-time.</ul>
       </div>
-      <div class="image1">
+      <div class="iot_device">
         <img src="assets/iot_device.jpeg">
       </div>
       </div>
