--- a/index.html
+++ b/index.html
@@ -82,19 +82,22 @@
 </section>
 <section>
   <div class="ai-advice">
+    <div class="container2">
     <div class="title">
       <h2>Ai Advisory</h2>
       <div class="contents">
        <P>🌾 Introduction: AI Advisory in Crops and Farming
       Artificial Intelligence (AI) is transforming the future of agriculture by enabling smart, data-driven decisions that increase productivity, reduce losses, and promote sustainable farming. AI advisory systems in crops and farming use machine learning, computer vision, and predictive analytics to assist farmers in managing their crops more effectively.
-
       By analyzing data from satellite imagery, weather patterns, soil sensors, and even smartphone photos, AI can provide real-time recommendations on crop health, disease risks, irrigation needs, pest control, and optimal harvesting times. These intelligent systems act like a virtual expert—offering personalized advice to farmers based on local conditions, historical data, and scientific knowledge.
-
       From detecting leaf diseases with a smartphone to predicting a pest outbreak days in advance, AI advisory tools are becoming powerful allies for both smallholder farmers and large-scale agricultural operations. As access to mobile technology and internet connectivity improves, AI has the potential to democratize expert farming knowledge and boost food security around the world.
-    </P>   
+    </P>
+    <div class="ai-advice-img">
+    <img src="assets/ai-advice.jpg">  
+  </div>
     </div>
     </div>
   </div>
+</div>
 </section>
 <script src="scripts.js"></script>
 </body>
