--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />  
     <link rel="stylesheet" href="styles.css">
     <link rel="script" href="scripts.js">
     <title> Agro-Tech </title>
@@ -22,7 +25,7 @@
     <h1>🌿Welcome to Agro-Tech - Where Farmers Meet the Future!</h1>
     
   </div>
-  <section>
+  <section class="sec1">
   <div class ="container0">
   <div class="card">
     <div class="search">
