--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />  
+  <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="script" href="scripts.js">
     <title> Agro-Tech </title>
@@ -22,8 +18,8 @@
     </div>
   </header>
   <div class="title">
-    <h1>🌿Welcome to Agro-Tech - Where Farmers Meet the Future!</h1>
-    
+    <h1> Agro-Tech </h1>
+    <h2> Smart Farming Solutions </h2>
   </div>
   <section class="sec1">
   <div class ="container0">
